--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
+    "@xenova/transformers": "^2.17.2",
     "chart.js": "^4.5.0",
+    "cheerio": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "vader-sentiment": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
