--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2",
+    "sentiment": "^5.0.2",
     "vader-sentiment": "^1.1.3"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/chart.js": "^2.9.41",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sentiment": "^5.0.4",
     "@types/spotify-api": "^0.0.25",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
